fix: images on tablet resolution

--- a/src/components/about/AboutSection.scss
+++ b/src/components/about/AboutSection.scss
@@ -40,6 +40,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      scale: 0.98;
 
       @media (max-width: 1380px) {
         max-width: 650px;
